seaqt/QtMultimedia/gen_qcamera.nim

proc fcQCamera_connect_brightnessChanged(self: pointer, slot: int) {.importc: "QCamera_connect_brightnessChanged".}
proc fcQCamera_contrastChanged(self: pointer, ): void {.importc: "QCamera_contrastChanged".}
proc fcQCamera_connect_contrastChanged(self: pointer, slot: int) {.importc: "QCamera_connect_contrastChanged".}
proc fcQCamera_saturationChanged(self: pointer, ): void {.importc: "QCamera_saturationChanged".}
proc fcQCamera_connect_saturationChanged(self: pointer, slot: int) {.importc: "QCamera_connect_saturationChanged".}
proc fcQCamera_hueChanged(self: pointer, ): void {.importc: "QCamera_hueChanged".}
proc fcQCamera_connect_hueChanged(self: pointer, slot: int) {.importc: "QCamera_connect_hueChanged".}
proc fcQCamera_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QCamera_tr2".}
proc fcQCamera_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCamera_tr3".}
proc fQCamera_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QCamera_virtualbase_metaObject".}
proc fcQCamera_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QCamera_override_virtual_metaObject".}
proc fQCamera_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QCamera_virtualbase_metacast".}
proc fcQCamera_override_virtual_metacast(self: pointer, slot: int) {.importc: "QCamera_override_virtual_metacast".}
proc fQCamera_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QCamera_virtualbase_metacall".}
proc fcQCamera_override_virtual_metacall(self: pointer, slot: int) {.importc: "QCamera_override_virtual_metacall".}
proc fQCamera_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QCamera_virtualbase_event".}
proc fcQCamera_override_virtual_event(self: pointer, slot: int) {.importc: "QCamera_override_virtual_event".}
proc fQCamera_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QCamera_virtualbase_eventFilter".}
proc fcQCamera_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QCamera_override_virtual_eventFilter".}
proc fQCamera_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QCamera_virtualbase_timerEvent".}
proc fcQCamera_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QCamera_override_virtual_timerEvent".}
proc fQCamera_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QCamera_virtualbase_childEvent".}
proc fcQCamera_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QCamera_override_virtual_childEvent".}
proc fQCamera_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QCamera_virtualbase_customEvent".}
proc fcQCamera_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QCamera_override_virtual_customEvent".}
proc fQCamera_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QCamera_virtualbase_connectNotify".}
proc fcQCamera_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QCamera_override_virtual_connectNotify".}
proc fQCamera_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QCamera_virtualbase_disconnectNotify".}
proc fcQCamera_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QCamera_override_virtual_disconnectNotify".}
proc fcQCamera_staticMetaObject(): pointer {.importc: "QCamera_staticMetaObject".}
proc fcQCamera_delete(self: pointer) {.importc: "QCamera_delete".}


func init*(T: type gen_qcamera_types.QCamera, h: ptr cQCamera): gen_qcamera_types.QCamera =
  T(h: h)
proc create*(T: type gen_qcamera_types.QCamera, ): gen_qcamera_types.QCamera =
  gen_qcamera_types.QCamera.init(fcQCamera_new())

proc create*(T: type gen_qcamera_types.QCamera, cameraDevice: gen_qcameradevice_types.QCameraDevice): gen_qcamera_types.QCamera =
  gen_qcamera_types.QCamera.init(fcQCamera_new2(cameraDevice.h))

proc create*(T: type gen_qcamera_types.QCamera, position: cint): gen_qcamera_types.QCamera =
  gen_qcamera_types.QCamera.init(fcQCamera_new3(cint(position)))

proc create*(T: type gen_qcamera_types.QCamera, parent: gen_qobject_types.QObject): gen_qcamera_types.QCamera =
  gen_qcamera_types.QCamera.init(fcQCamera_new4(parent.h))

proc create*(T: type gen_qcamera_types.QCamera, cameraDevice: gen_qcameradevice_types.QCameraDevice, parent: gen_qobject_types.QObject): gen_qcamera_types.QCamera =
  gen_qcamera_types.QCamera.init(fcQCamera_new5(cameraDevice.h, parent.h))

proc create*(T: type gen_qcamera_types.QCamera, position: cint, parent: gen_qobject_types.QObject): gen_qcamera_types.QCamera =
  gen_qcamera_types.QCamera.init(fcQCamera_new6(cint(position), parent.h))

proc metaObject*(self: gen_qcamera_types.QCamera, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQCamera_metaObject(self.h))

proc metacast*(self: gen_qcamera_types.QCamera, param1: cstring): pointer =
  fcQCamera_metacast(self.h, param1)

proc metacall*(self: gen_qcamera_types.QCamera, param1: cint, param2: cint, param3: pointer): cint =
  fcQCamera_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qcamera_types.QCamera, s: cstring): string =
  let v_ms = fcQCamera_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isAvailable*(self: gen_qcamera_types.QCamera, ): bool =
  fcQCamera_isAvailable(self.h)

proc isActive*(self: gen_qcamera_types.QCamera, ): bool =
  fcQCamera_isActive(self.h)

proc captureSession*(self: gen_qcamera_types.QCamera, ): gen_qmediacapturesession_types.QMediaCaptureSession =
  gen_qmediacapturesession_types.QMediaCaptureSession(h: fcQCamera_captureSession(self.h))

proc cameraDevice*(self: gen_qcamera_types.QCamera, ): gen_qcameradevice_types.QCameraDevice =
  gen_qcameradevice_types.QCameraDevice(h: fcQCamera_cameraDevice(self.h))

proc setCameraDevice*(self: gen_qcamera_types.QCamera, cameraDevice: gen_qcameradevice_types.QCameraDevice): void =
  fcQCamera_setCameraDevice(self.h, cameraDevice.h)

proc cameraFormat*(self: gen_qcamera_types.QCamera, ): gen_qcameradevice_types.QCameraFormat =
  gen_qcameradevice_types.QCameraFormat(h: fcQCamera_cameraFormat(self.h))

proc setCameraFormat*(self: gen_qcamera_types.QCamera, format: gen_qcameradevice_types.QCameraFormat): void =
  fcQCamera_setCameraFormat(self.h, format.h)

proc error*(self: gen_qcamera_types.QCamera, ): cint =
  cint(fcQCamera_error(self.h))

proc errorString*(self: gen_qcamera_types.QCamera, ): string =
  let v_ms = fcQCamera_errorString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc supportedFeatures*(self: gen_qcamera_types.QCamera, ): cint =
  cint(fcQCamera_supportedFeatures(self.h))

proc focusMode*(self: gen_qcamera_types.QCamera, ): cint =
  cint(fcQCamera_focusMode(self.h))

proc setFocusMode*(self: gen_qcamera_types.QCamera, mode: cint): void =
  fcQCamera_setFocusMode(self.h, cint(mode))

proc isFocusModeSupported*(self: gen_qcamera_types.QCamera, mode: cint): bool =
  fcQCamera_isFocusModeSupported(self.h, cint(mode))

proc focusPoint*(self: gen_qcamera_types.QCamera, ): gen_qpoint_types.QPointF =
  gen_qpoint_types.QPointF(h: fcQCamera_focusPoint(self.h))

proc customFocusPoint*(self: gen_qcamera_types.QCamera, ): gen_qpoint_types.QPointF =
  gen_qpoint_types.QPointF(h: fcQCamera_customFocusPoint(self.h))

proc setCustomFocusPoint*(self: gen_qcamera_types.QCamera, point: gen_qpoint_types.QPointF): void =
  fcQCamera_setCustomFocusPoint(self.h, point.h)

proc setFocusDistance*(self: gen_qcamera_types.QCamera, d: float32): void =
  fcQCamera_setFocusDistance(self.h, d)

proc focusDistance*(self: gen_qcamera_types.QCamera, ): float32 =
  fcQCamera_focusDistance(self.h)

proc minimumZoomFactor*(self: gen_qcamera_types.QCamera, ): float32 =
  fcQCamera_minimumZoomFactor(self.h)

proc maximumZoomFactor*(self: gen_qcamera_types.QCamera, ): float32 =
  fcQCamera_maximumZoomFactor(self.h)

proc zoomFactor*(self: gen_qcamera_types.QCamera, ): float32 =
  fcQCamera_zoomFactor(self.h)

proc setZoomFactor*(self: gen_qcamera_types.QCamera, factor: float32): void =
  fcQCamera_setZoomFactor(self.h, factor)

proc flashMode*(self: gen_qcamera_types.QCamera, ): cint =
  cint(fcQCamera_flashMode(self.h))

proc isFlashModeSupported*(self: gen_qcamera_types.QCamera, mode: cint): bool =
  fcQCamera_isFlashModeSupported(self.h, cint(mode))

proc isFlashReady*(self: gen_qcamera_types.QCamera, ): bool =
  fcQCamera_isFlashReady(self.h)

proc torchMode*(self: gen_qcamera_types.QCamera, ): cint =
  cint(fcQCamera_torchMode(self.h))

proc isTorchModeSupported*(self: gen_qcamera_types.QCamera, mode: cint): bool =
  fcQCamera_isTorchModeSupported(self.h, cint(mode))

proc exposureMode*(self: gen_qcamera_types.QCamera, ): cint =
  cint(fcQCamera_exposureMode(self.h))

proc isExposureModeSupported*(self: gen_qcamera_types.QCamera, mode: cint): bool =
  fcQCamera_isExposureModeSupported(self.h, cint(mode))

proc exposureCompensation*(self: gen_qcamera_types.QCamera, ): float32 =
  fcQCamera_exposureCompensation(self.h)

proc isoSensitivity*(self: gen_qcamera_types.QCamera, ): cint =
  fcQCamera_isoSensitivity(self.h)

proc manualIsoSensitivity*(self: gen_qcamera_types.QCamera, ): cint =
  fcQCamera_manualIsoSensitivity(self.h)

proc exposureTime*(self: gen_qcamera_types.QCamera, ): float32 =
  fcQCamera_exposureTime(self.h)

proc manualExposureTime*(self: gen_qcamera_types.QCamera, ): float32 =
  fcQCamera_manualExposureTime(self.h)

proc minimumIsoSensitivity*(self: gen_qcamera_types.QCamera, ): cint =
  fcQCamera_minimumIsoSensitivity(self.h)

proc maximumIsoSensitivity*(self: gen_qcamera_types.QCamera, ): cint =
  fcQCamera_maximumIsoSensitivity(self.h)

proc minimumExposureTime*(self: gen_qcamera_types.QCamera, ): float32 =
  fcQCamera_minimumExposureTime(self.h)

proc maximumExposureTime*(self: gen_qcamera_types.QCamera, ): float32 =
  fcQCamera_maximumExposureTime(self.h)

proc whiteBalanceMode*(self: gen_qcamera_types.QCamera, ): cint =
  cint(fcQCamera_whiteBalanceMode(self.h))

proc isWhiteBalanceModeSupported*(self: gen_qcamera_types.QCamera, mode: cint): bool =
  fcQCamera_isWhiteBalanceModeSupported(self.h, cint(mode))

proc colorTemperature*(self: gen_qcamera_types.QCamera, ): cint =
  fcQCamera_colorTemperature(self.h)

proc setActive*(self: gen_qcamera_types.QCamera, active: bool): void =
  fcQCamera_setActive(self.h, active)

proc start*(self: gen_qcamera_types.QCamera, ): void =
  fcQCamera_start(self.h)

proc stop*(self: gen_qcamera_types.QCamera, ): void =
  fcQCamera_stop(self.h)

proc zoomTo*(self: gen_qcamera_types.QCamera, zoom: float32, rate: float32): void =
  fcQCamera_zoomTo(self.h, zoom, rate)

proc setFlashMode*(self: gen_qcamera_types.QCamera, mode: cint): void =
  fcQCamera_setFlashMode(self.h, cint(mode))

proc setTorchMode*(self: gen_qcamera_types.QCamera, mode: cint): void =
  fcQCamera_setTorchMode(self.h, cint(mode))

proc setExposureMode*(self: gen_qcamera_types.QCamera, mode: cint): void =
  fcQCamera_setExposureMode(self.h, cint(mode))

proc setExposureCompensation*(self: gen_qcamera_types.QCamera, ev: float32): void =
  fcQCamera_setExposureCompensation(self.h, ev)

proc setManualIsoSensitivity*(self: gen_qcamera_types.QCamera, iso: cint): void =
  fcQCamera_setManualIsoSensitivity(self.h, iso)

proc setAutoIsoSensitivity*(self: gen_qcamera_types.QCamera, ): void =
  fcQCamera_setAutoIsoSensitivity(self.h)

proc setManualExposureTime*(self: gen_qcamera_types.QCamera, seconds: float32): void =
  fcQCamera_setManualExposureTime(self.h, seconds)

proc setAutoExposureTime*(self: gen_qcamera_types.QCamera, ): void =
  fcQCamera_setAutoExposureTime(self.h)

proc setWhiteBalanceMode*(self: gen_qcamera_types.QCamera, mode: cint): void =
  fcQCamera_setWhiteBalanceMode(self.h, cint(mode))
